// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Group component renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F5FF",
      "borderRadius": 6,
      "height": 40,
      "justifyContent": "center",
      "padding": 1,
      "width": 40,
    }
  }
  testID="avatar_group"
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "height": 40,
        "width": 40,
      }
    }
    testID="avatar"
  >
    <View
      style={
        Object {
          "backgroundColor": "#B2BDCD",
          "borderRadius": 6,
          "height": 40,
          "width": 40,
        }
      }
      testID="avatar_container"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "borderRadius": 6,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 6,
                "height": 40,
                "width": 40,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/images/group_avatar_default.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="avatar.image"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar Group component renders correctly avatar when call Avatar.Group 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F5FF",
      "borderRadius": 6,
      "height": 40,
      "justifyContent": "center",
      "padding": 1,
      "width": 40,
    }
  }
  testID="avatar_group"
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "height": 40,
        "width": 40,
      }
    }
    testID="avatar"
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "height": 40,
          "width": 40,
        }
      }
      testID="avatar_container"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "borderRadius": 6,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 6,
                "height": 40,
                "width": 40,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/images/bein_logo.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="avatar.image"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar Group component renders correctly group with 2 member 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F5FF",
      "borderRadius": 6,
      "height": 40,
      "justifyContent": "center",
      "padding": 1,
      "width": 40,
    }
  }
  testID="avatar_group"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
    testID="avatar_group.group_2"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#FFFFFF",
          "borderRadius": 6,
          "borderWidth": 2,
          "height": 22,
          "overflow": "hidden",
          "width": 22,
        }
      }
      testID="avatar_group.item_0"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "height": 18,
                "justifyContent": "center",
                "width": 18,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#F8F5FF",
                "height": 18,
                "width": 18,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://cdn.dribbble.com/users/183984/screenshots/2562247/pokemon.jpg",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#FFFFFF",
          "borderRadius": 6,
          "borderWidth": 2,
          "height": 22,
          "marginLeft": -6,
          "overflow": "hidden",
          "width": 22,
        }
      }
      testID="avatar_group.item_1"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "height": 18,
                "justifyContent": "center",
                "width": 18,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#F8F5FF",
                "height": 18,
                "width": 18,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://cdn.dribbble.com/users/183984/screenshots/2569843/pokemon_3.jpg",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar Group component renders correctly group with 3 member 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F5FF",
      "borderRadius": 6,
      "height": 40,
      "justifyContent": "center",
      "padding": 1,
      "width": 40,
    }
  }
  testID="avatar_group"
>
  <View
    testID="avatar_group.group_3"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_0"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2562247/pokemon.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "marginLeft": -6,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_1"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2569843/pokemon_3.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": -8,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_2"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2565088/pokemon_2.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar Group component renders correctly group with 4 member 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F5FF",
      "borderRadius": 6,
      "height": 40,
      "justifyContent": "center",
      "padding": 1,
      "width": 40,
    }
  }
  testID="avatar_group"
>
  <View
    testID="avatar_group.group_4"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_0"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2562247/pokemon.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "marginLeft": -6,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_1"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2569843/pokemon_3.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": -8,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_2"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2565088/pokemon_2.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "marginLeft": -6,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_3"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2574264/pokemon_4.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar Group component renders correctly group with 4+ member with totalMember 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F5FF",
      "borderRadius": 6,
      "height": 40,
      "justifyContent": "center",
      "padding": 1,
      "width": 40,
    }
  }
  testID="avatar_group"
>
  <View
    testID="avatar_group.group_4_plus"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_0"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2562247/pokemon.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "marginLeft": -6,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_1"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2569843/pokemon_3.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": -8,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_2"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2565088/pokemon_2.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 6,
            "height": 22,
            "justifyContent": "center",
            "marginLeft": -6,
            "width": 22,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2F3945",
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
              },
              Object {},
              Object {
                "fontFamily": "OpenSans-Regular",
                "fontSize": 8,
                "marginTop": 2,
              },
            ]
          }
          testID="avatar_group.total_member"
        >
          +99
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar Group component renders correctly group with 4+ member without totalMember 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F5FF",
      "borderRadius": 6,
      "height": 40,
      "justifyContent": "center",
      "padding": 1,
      "width": 40,
    }
  }
  testID="avatar_group"
>
  <View
    testID="avatar_group.group_4_plus"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_0"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2562247/pokemon.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "marginLeft": -6,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_1"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2569843/pokemon_3.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": -8,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#FFFFFF",
            "borderRadius": 6,
            "borderWidth": 2,
            "height": 22,
            "overflow": "hidden",
            "width": 22,
          }
        }
        testID="avatar_group.item_2"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "position": "relative",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#f9f9f9",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
              testID="Image__placeholder"
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "backgroundColor": "#F8F5FF",
                  "height": 18,
                  "width": 18,
                },
              ]
            }
          >
            <FastImageView
              onFastImageError={[Function]}
              onFastImageLoadEnd={[Function]}
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://cdn.dribbble.com/users/183984/screenshots/2565088/pokemon_2.jpg",
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 6,
            "height": 22,
            "justifyContent": "center",
            "marginLeft": -6,
            "width": 22,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#FFFFFF",
              "borderRadius": 6,
              "borderWidth": 2,
              "height": 22,
              "overflow": "hidden",
              "width": 22,
            }
          }
          testID="avatar_group.item_3"
        >
          <View
            onLayout={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "position": "relative",
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#f9f9f9",
                    "height": 18,
                    "justifyContent": "center",
                    "width": 18,
                  }
                }
                testID="Image__placeholder"
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "backgroundColor": "#F8F5FF",
                    "height": 18,
                    "width": 18,
                  },
                ]
              }
            >
              <FastImageView
                onFastImageError={[Function]}
                onFastImageLoadEnd={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://cdn.dribbble.com/users/183984/screenshots/2582592/pokemon_5.jpg",
                  }
                }
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Avatar Group component renders correctly group with no member 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F5FF",
      "borderRadius": 6,
      "height": 40,
      "justifyContent": "center",
      "padding": 1,
      "width": 40,
    }
  }
  testID="avatar_group"
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "height": 40,
        "width": 40,
      }
    }
    testID="avatar"
  >
    <View
      style={
        Object {
          "backgroundColor": "#B2BDCD",
          "borderRadius": 6,
          "height": 40,
          "width": 40,
        }
      }
      testID="avatar_container"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "borderRadius": 6,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 6,
                "height": 40,
                "width": 40,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/images/group_avatar_default.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="avatar.image"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
